# dynamic-graphql

./: .gitignore  Cargo.toml
src/: lib.rs  sort_schema.rs  test.rs  test_juniper_json.rs  test_juniper_sort.rs
src/juniper/: json.rs  mod.rs  sort.rs
