[package]
name = "dynamic-graphql"
version = "0.1.0"
authors = ["Hiram Chirino <hiram@hiramchirino.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
juniper = { git = "https://github.com/graphql-rust/juniper" }
graphql-parser = "0.3.0"
